[project]
name = "muavic"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "scikit-image>=0.25.2",
    "sox>=1.5.0",
    "tqdm>=4.67.1",
    "wget>=3.2",
    "xmltodict>=1.0.2",
    "yt-dlp>=2025.9.26",
]
